add purchaseitem pictureurl, add purhcase store info and total
