# v1/doc/swagger.yaml
@@ -1001,6 +1001,29 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  /Purchase/User/{id}:
+    parameters:
+      - name: id
+        in: path
+        type: string
+        required: true
+        description: Unique customer identifier to be used for experience customization.
+    get:
+      summary: Get Purchase list by User id
+      description: Return a list Purchase by User id.
+      tags:
+        - Purchases
+      responses:
+        '200':
+          description: An array of Purchases found
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Purchase'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
   /PurchaseItem:
     parameters:
         - name: access_token
@@ -1098,6 +1121,29 @@ paths:
       responses:
         '200':
           description: An array of PurchaseItems
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/PurchaseItem'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /PurchaseItem/Purchase/{id}:
+    parameters:
+      - name: id
+        in: path
+        type: string
+        required: true
+        description: Unique customer identifier to be used for experience customization.
+    get:
+      summary: Get PurchaseItem by Purchase id
+      description: Return a list PurchaseItem by id.
+      tags:
+        - PurchaseItems
+      responses:
+        '200':
+          description: An array of PurchaseItems found
           schema:
             type: array
             items:
@@ -1583,16 +1629,37 @@ definitions:
         description: Given id
       idStore:
         type: string
-        description: Store
+        description: Store id
+      nameStore:
+        type: string
+        description: Store Name
+      addressStore:
+        type: string
+        description: Store Address
       idUser:
         type: string
-        description: User
+        description: User id
+      nameUser:
+        type: string
+        description: User name
       status:
         type: string
         description: Status
       idPaymentMethod:
         type: string
         description: Payment Method
+      date:
+        type: string
+        format: date-time
+        description: Purchase Date
+      totalAmount:
+        type: number
+        format: double
+        description: Total Amount
+      totalQuantity:
+        type: number
+        format: double
+        description: Total Quantity
       postDate:
         type: string
         format: date-time
@@ -1631,6 +1698,13 @@ definitions:
         type: number
         format: double
         description: Purchased
+      unitPrice:
+        type: number
+        format: double
+        description: Unit Price
+      pictureUrl:
+        type: string
+        description: Picture Url
       postDate:
         type: string
         format: date-time
